# SD-SGM

./: CMakeLists.txt  README.md
config/: config_apollo.yaml  config_ford_campus.yaml  config_kitti360_graph.yaml  config_kitti_graph.yaml
scripts/: eval_loop_pose.py  eval_overlap_dataset.py  pr_curve.py
semgraph/: CMakeLists.txt  Coreutils.hpp  Max_clique.cpp  Max_clique.hpp  NDT.cpp  NDT.h  SemanticCluster.cpp  SemanticCluster.hpp  SemanticGraph.cpp  SemanticGraph.hpp
semgraph/3dParty/oneTBB/cmake/compilers/: GNU.cmake
src/: eval_lcd_pair.cpp  eval_lcd_seq.cpp  eval_lcd_seq_kitti360.cpp  eval_loop_poses.cpp  eval_loop_poses_kitti360.cpp  eval_loop_poses_pair.cpp  eval_overlap_apollo.cpp  eval_overlap_ford_campus.cpp
